--- a/index.html
+++ b/index.html
@@ -4,39 +4,52 @@
 <head>
     <meta charset="UTF-8">
     <title>Raziel Panic // You Shriek - EPK</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background-color: #111;
-            color: #f4f4f4;
+            background-color: #0d0d0d;
+            color: #eaeaea;
+            font-family: 'Inter', sans-serif;
+            margin: 0 auto;
             max-width: 800px;
-            margin: 40px auto;
             padding: 20px;
             line-height: 1.6;
         }
-        h1, h2, h3 {
+        h1, h2 {
             color: #e00000;
         }
         a {
             color: #f55;
             text-decoration: none;
         }
-        .section {
-            margin-bottom: 40px;
-        }
         .press-photo {
-            text-align: center;
-            margin-bottom: 20px;
+            float: left;
+            margin-right: 20px;
+            width: 280px;
         }
-        .press-photo img {
-            width: 100%;
-            max-width: 700px;
-            border: 1px solid #444;
+        .section {
+            clear: both;
+            margin-top: 40px;
         }
         .tagline {
             font-style: italic;
-            font-size: 1.1em;
             color: #ccc;
+            margin-top: -10px;
+            margin-bottom: 30px;
+        }
+        ul {
+            list-style: none;
+            padding-left: 0;
+        }
+        .social-icons a {
+            display: inline-block;
+            margin-right: 10px;
+            font-size: 16px;
+            color: #f55;
+            background: #222;
+            padding: 6px 10px;
+            border-radius: 4px;
+            text-decoration: none;
         }
     </style>
 </head>
@@ -44,20 +57,13 @@
     <h1>Raziel Panic // You Shriek</h1>
     <p class="tagline">Darkwave guitar/electronic hybrid from Boston</p>
 
-    <div class="section press-photo">
-        <h2>Press Photo</h2>
-        <img src="raziel_panic_press_photo.jpg" alt="Raziel Panic Press Photo">
-        <p><a href="raziel_panic_press_photo.jpg" download>Download Press Photo</a></p>
-    </div>
+    <img src="raziel_panic_press_photo.jpg" alt="Raziel Panic Press Photo" class="press-photo">
 
-    <div class="section">
-        <h2>Artist Bio</h2>
-        <p><strong>Short Form:</strong><br>
-        Raziel Panic is the solo performance identity of Boston-based darkwave/electronic artist <em>You Shriek</em>. 
-        With a hybrid live rig of electric guitar and electronics, Raziel delivers emotionally charged performances that 
-        blend gothic textures, synth-driven rhythms, and brooding vocals. Rooted in the industrial and darkwave underground, 
-        his sound fuses analog grit with melodic hooks, appealing to fans of synthpop, post-punk, and experimental rock alike.</p>
-    </div>
+    <h2>Artist Bio</h2>
+    <p>Raziel Panic is the solo performance identity of Boston-based darkwave/electronic artist <em>You Shriek</em>. 
+    With a hybrid live rig of electric guitar and electronics, Raziel delivers emotionally charged performances that 
+    blend gothic textures, synth-driven rhythms, and brooding vocals. Rooted in the industrial and darkwave underground, 
+    his sound fuses analog grit with melodic hooks, appealing to fans of synthpop, post-punk, and experimental rock alike.</p>
 
     <div class="section">
         <h2>Media Links</h2>
@@ -65,6 +71,12 @@
             <li><a href="https://linktr.ee/youshriek" target="_blank">Linktree</a></li>
             <li><a href="https://www.youtube.com/watch?v=Hjls8VaqWmg" target="_blank">Live Performance Video (YouTube)</a></li>
         </ul>
+        <div class="social-icons">
+            <a href="https://instagram.com/youshriek" target="_blank">Instagram</a>
+            <a href="https://facebook.com/youshriek" target="_blank">Facebook</a>
+            <a href="https://youshriek.bandcamp.com" target="_blank">Bandcamp</a>
+            <a href="https://open.spotify.com/artist/2fz6IKRmQL4Ez3RGHDlWzv" target="_blank">Spotify</a>
+        </div>
     </div>
 
     <div class="section">
